--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,12 @@ subprojects {
             dependencies {
                 //implementation(platform("org.springframework.boot:spring-boot-dependencies:$version_springBoot"))
 
+                testImplementation("org.assertj:assertj-core")
+                testImplementation("org.awaitility:awaitility")
                 testImplementation("org.junit.jupiter:junit-jupiter")
+                testImplementation("org.mockito:mockito-junit-jupiter")
                 testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+                testRuntimeOnly("org.slf4j:slf4j-simple")
             }
         }
     }
