--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,9 @@ subprojects {
     }
 
     afterEvaluate { project ->
-        if (project.plugins.hasPlugin("java") || project.plugins.hasPlugin("java-library") || project.plugins.hasPlugin("application")) {
+        if (project.plugins.hasPlugin("java")
+                || project.plugins.hasPlugin("java-library")
+                || project.plugins.hasPlugin("application")) {
             dependencies {
                 //implementation(platform("org.springframework.boot:spring-boot-dependencies:$version_springBoot"))
 
