--- a/misc/misc-protobuf/build.gradle
+++ b/misc/misc-protobuf/build.gradle
@@ -22,4 +22,6 @@ protobuf {
 
 dependencies {
     implementation("com.google.protobuf:protobuf-java:$version_protobufProtoc")
+
+    testImplementation("com.google.protobuf:protobuf-java-util:$version_protobufProtoc") // JsonFormat
 }
