--- a/build.gradle
+++ b/build.gradle
@@ -73,3 +73,11 @@ subprojects {
         }
     }
 }
+
+// For Composite Build.
+tasks.register("cleanAll", GradleBuild) {
+    tasks = ["clean"]
+}
+tasks.register("buildAll", GradleBuild) {
+    tasks = ["build"]
+}
