--- a/misc/misc-sonstiges/build.gradle
+++ b/misc/misc-sonstiges/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     implementation("org.apache.commons:commons-compress")
     implementation("org.apache.commons:commons-lang3")
     implementation("org.apache.logging.log4j:log4j-to-slf4j")
-    implementation("org.apache.lucene:lucene-analyzers-common")
+    implementation("org.apache.lucene:lucene-analysis-common")
+    implementation("org.apache.lucene:lucene-queryparser")
     implementation("org.apache.xmlgraphics:batik-codec")
     implementation("org.apache.xmlgraphics:batik-swing")
     implementation("org.apache.xmlgraphics:batik-transcoder")
