--- a/misc/misc-jconky/build.gradle
+++ b/misc/misc-jconky/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     javafx {
         version = "$version_javafx"
         modules = ["javafx.controls", "javafx.swing"]
+        configuration = "implementation"
     }
 }
 
