--- a/misc/misc-cache/build.gradle
+++ b/misc/misc-cache/build.gradle
@@ -7,6 +7,7 @@ description = "Demos für Caching"
 dependencies {
     implementation("com.github.ben-manes.caffeine:caffeine")
     implementation("com.hazelcast:hazelcast")
+    implementation("javax.cache:cache-api")
     implementation("org.ehcache:ehcache:${dependencyManagement.importedProperties["ehcache3.version"]}:jakarta")
     implementation("org.slf4j:jul-to-slf4j")
     implementation("org.springframework.boot:spring-boot-starter-cache") {
