--- a/misc/misc-jconky/build.gradle
+++ b/misc/misc-jconky/build.gradle
@@ -6,16 +6,27 @@ plugins {
 
 description = "Java-Clone of Linux Tool 'conky'"
 
+// For JavaFx native-Library Downloads.
+configurations.matching { it.canBeResolved }.configureEach {
+    attributes {
+        attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
+        attribute(OperatingSystemFamily.OPERATING_SYSTEM_ATTRIBUTE, objects.named(OperatingSystemFamily, OperatingSystemFamily.LINUX))
+        attribute(MachineArchitecture.ARCHITECTURE_ATTRIBUTE, objects.named(MachineArchitecture, MachineArchitecture.X86_64))
+    }
+}
+
+javafx {
+    version = "$version_javafx"
+    modules = ["javafx.controls", "javafx.swing"]
+    configuration = "implementation"
+    // platform = "linux" // linux, windows, mac
+    // sdk = "PATH"
+}
+
 dependencies {
     implementation("org.slf4j:slf4j-api")
 
     runtimeOnly("ch.qos.logback:logback-classic")
-
-    javafx {
-        version = "$version_javafx"
-        modules = ["javafx.controls", "javafx.swing"]
-        configuration = "implementation"
-    }
 }
 
 // Start: gradle bootRun --args="--spring.profiles.active=dev"
