--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 plugins {
     id "de.freese.gradle.java.conventions" version "$version_myJavaConventionPlugin" apply false
     id "de.freese.gradle.sonarlint-conventions" version "$version_myJavaConventionPlugin" apply false
-    
+
     id "io.spring.dependency-management" version "$version_springDependencyManagement" apply false
     id "org.openjfx.javafxplugin" version "$version_javafxPlugin" apply false
     id "org.springframework.boot" version "$version_springBoot" apply false
@@ -39,8 +39,8 @@ allprojects {
 subprojects {
     apply plugin: "de.freese.gradle.java.conventions"
     apply plugin: "io.spring.dependency-management"
-    // apply plugin: "name.remal.sonarlint"
-    // apply plugin: "de.freese.gradle.sonarlint-conventions"
+    apply plugin: "name.remal.sonarlint"
+    apply plugin: "de.freese.gradle.sonarlint-conventions"
 
     dependencyManagement {
         imports {
