--- a/meta-model/build.gradle
+++ b/meta-model/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation("com.oracle.database.jdbc:ojdbc11")
     testImplementation("org.hibernate.validator:hibernate-validator")
     testImplementation("org.hsqldb:hsqldb")
+    testImplementation("org.slf4j:slf4j-simple")
     testImplementation("org.mariadb.jdbc:mariadb-java-client")
     testImplementation("org.xerial:sqlite-jdbc")
 }
