--- a/misc/misc-micrometer/build.gradle
+++ b/misc/misc-micrometer/build.gradle
@@ -10,4 +10,6 @@ dependencies {
     implementation("org.slf4j:slf4j-api")
 
     runtimeOnly("org.slf4j:slf4j-simple")
+    
+    testImplementation("org.slf4j:slf4j-simple")
 }
