--- a/misc/misc-sonstiges/build.gradle
+++ b/misc/misc-sonstiges/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml")
     implementation("com.fasterxml.jackson.module:jackson-module-jaxb-annotations")
-    implementation("com.h2database:h2")
+
     implementation("com.lmax:disruptor")
     implementation("com.zaxxer:HikariCP")
     implementation("dev.failsafe:failsafe")
@@ -43,7 +43,6 @@ dependencies {
     implementation("org.apache.velocity:velocity-engine-core")
     implementation("org.freemarker:freemarker")
     implementation("org:jaudiotagger")
-    implementation("org.hsqldb:hsqldb")
     implementation("org.jsoup:jsoup")
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation("org.springframework.boot:spring-boot-starter-mail") {
@@ -51,12 +50,14 @@ dependencies {
         exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
     }
 
+    runtimeOnly("com.h2database:h2")
     runtimeOnly("com.oracle.database.jdbc:ojdbc11")
     runtimeOnly("org.glassfish.jaxb:jaxb-runtime") // Implementation of jakarta.json.bind:jakarta.json.bind-api
+    runtimeOnly("org.hsqldb:hsqldb")
     runtimeOnly("org.slf4j:slf4j-simple")
 
-    // tomcat-juli ist in tomcat-catalina enthalten, aber auch viele andere Jars die nicht benötigt werden.
     testImplementation("org.apache.tomcat:tomcat-catalina") {
+        // tomcat-juli ist in tomcat-catalina enthalten, aber auch viele andere Jars die nicht benötigt werden.
         exclude group: "org.apache.tomcat"
     }
     testImplementation("org.apache.tomcat:tomcat-juli")
