--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ group = de.freese
 version = 0.0.1-SNAPSHOT
 
 description = Java-Projects
+
+#org.gradle.usage = linuxRuntime
+
+org.gradle.configuration-cache = false
+org.gradle.configuration-cache.parallel = false
