--- a/misc/misc-micrometer/prometheus.yml
+++ b/misc/misc-micrometer/prometheus.yml
@@ -8,12 +8,13 @@ rule_files:
 # - "first_rules.yml"
 # - "second_rules.yml"
 
+# The job name is added as a label `job=<job_name>` to any time series scraped from this config.
 scrape_configs:
 
     # Here it's Prometheus itself.
-    #- job_name: 'prometheus'
-    #  static_configs:
-    #      - targets: ["127.0.0.1:9090"]
+    # - job_name: "prometheus"
+    #      static_configs:
+    #         - targets: ["127.0.0.1:9090"]
 
     -   job_name: "test.micrometer"
         metrics_path: "prometheus"
